--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,15 @@
 <resources>
-    <string name="app_name">SSUParty-android</string>
+    <string name="app_name">SSUParty</string>
+
+    <!-- Font -->
+    <string name="naum_square_light">fonts/NanumSquareOTFLight.otf</string>
+    <string name="naum_square_regular">fonts/NanumSquareOTFRegular.otf</string>
+    <string name="naum_square_bold">fonts/NanumSquareOTFBold.otf</string>
+    <string name="naum_square_exbold">fonts/NanumSquareOTFExtraBold.otf</string>
+
+    <!-- Bottom Navigation Section -->
+    <string name="section_home_title">Home</string>
+    <string name="section_myparty_title">My Party</string>
+    <string name="section_findparty_title">Find Party</string>
+
 </resources>
