[SPA-2] 카카오톡 로그인 기능 구현 (상세 UI 제외)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,9 @@
 <resources>
     <string name="app_name">SSUParty</string>
 
+    <!-- Auth -->
+    <string name="kakao_app_key"> 1e4c209b64037f8af87fc39c618b91f0</string>
+
     <!-- Font -->
     <string name="naum_square_light">fonts/NanumSquareOTFLight.otf</string>
     <string name="naum_square_regular">fonts/NanumSquareOTFRegular.otf</string>
@@ -11,5 +14,6 @@
     <string name="section_home_title">Home</string>
     <string name="section_myparty_title">My Party</string>
     <string name="section_findparty_title">Find Party</string>
+    <string name="title_activity_account">AccountActivity</string>
 
 </resources>
