--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,7 @@
     <string name="section_home_title">Home</string>
     <string name="section_myparty_title">My Party</string>
     <string name="section_allparty_title">Find Party</string>
+    <string name="section_profile_title">프로필</string>
     <string name="title_activity_account">AccountActivity</string>
 
     <string name="facebook_app_id">1930468173833531</string>
