--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,8 +12,8 @@
 
     <!-- Bottom Navigation Section -->
     <string name="section_home_title">Home</string>
-    <string name="section_myparty_title">My Party</string>
-    <string name="section_allparty_title">Find Party</string>
+    <string name="section_myparty_title">내 모임</string>
+    <string name="section_allparty_title">모임 찾기</string>
     <string name="section_profile_title">프로필</string>
     <string name="title_activity_account">AccountActivity</string>
 
