텍스트 이슈 해결

--- a/app/src/main/res/values-ko/strings.xml
+++ b/app/src/main/res/values-ko/strings.xml
@@ -4,6 +4,6 @@
 
     <!-- Bottom Navigation Section -->
     <string name="section_home_title">메인</string>
-    <string name="section_myparty_title">내 파티</string>
-    <string name="section_allparty_title">파티 찾기</string>
+    <string name="section_myparty_title">내 모임</string>
+    <string name="section_allparty_title">모임 찾기</string>
 </resources>
