--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,7 +11,7 @@
     <string name="naum_square_exbold">fonts/NanumSquareOTFExtraBold.otf</string>
 
     <!-- Bottom Navigation Section -->
-    <string name="section_home_title">Home</string>
+    <string name="section_home_title">메인</string>
     <string name="section_myparty_title">내 모임</string>
     <string name="section_allparty_title">모임 찾기</string>
     <string name="section_profile_title">프로필</string>
